# PP-CNN2

./: CMakeLists.txt  README.md
demo/client/: CMakeLists.txt  main.cpp
demo/server/: CMakeLists.txt  main.cpp
ppcnn/ppcnn_client/: ppcnn_client_keycontainer.cpp
ppcnn/ppcnn_server/: ppcnn_server_calcthread.cpp  ppcnn_server_callback_function.cpp
ppcnn/ppcnn_share/: ppcnn_encdata.cpp  ppcnn_seal_utility.cpp
ppcnn/ppcnn_share/cnn_utils/: helper_functions.cpp
